--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@dfinity/agent": "0.10.0",
-    "@dfinity/auth-client": "0.10.0",
-    "@dfinity/authentication": "0.10.0",
-    "@dfinity/candid": "0.10.0",
-    "@dfinity/identity": "0.10.0",
-    "@dfinity/principal": "0.10.0",
+    "@dfinity/agent": "0.9.2",
+    "@dfinity/candid": "0.9.2",
+    "@dfinity/identity": "0.9.2",
+    "@dfinity/principal": "0.9.2",
+    "bip39": "3.0.4",
+    "borc": "3.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "5.3.0"
