--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "5.3.2",
     "@vitejs/plugin-react-refresh": "^1.3.6",
+    "autoprefixer": "10.3.7",
     "buffer": "^6.0.3",
     "npm-run-all": "4.1.5",
+    "postcss": "8.3.11",
+    "tailwindcss": "2.2.17",
     "typescript": "^4.4.3",
     "vite": "^2.5.7",
     "vite-plugin-swc-react": "0.1.9"
