--- a/package.json
+++ b/package.json
@@ -30,6 +30,6 @@
     "tailwindcss": "2.2.17",
     "typescript": "^4.4.3",
     "vite": "^2.5.7",
-    "vite-plugin-swc-react": "0.1.9"
+    "vite-tsconfig-paths": "3.3.17"
   }
 }
