--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@dfinity/principal": "0.9.2",
     "bip39": "3.0.4",
     "borc": "3.0.0",
+    "clsx": "1.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "5.3.0"
