--- a/package.json
+++ b/package.json
@@ -24,11 +24,19 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "5.3.2",
+    "@typescript-eslint/eslint-plugin": "5.2.0",
+    "@typescript-eslint/parser": "5.2.0",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "autoprefixer": "10.3.7",
     "buffer": "^6.0.3",
+    "eslint": "7.32.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-prettier": "4.0.0",
+    "eslint-plugin-react": "7.26.1",
+    "eslint-plugin-react-hooks": "4.2.0",
     "npm-run-all": "4.1.5",
     "postcss": "8.3.11",
+    "prettier": "2.4.1",
     "tailwindcss": "2.2.17",
     "typescript": "^4.4.3",
     "vite": "^2.5.7",
