--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@dfinity/candid": "0.9.2",
     "@dfinity/identity": "0.9.2",
     "@dfinity/principal": "0.9.2",
+    "@emotion/css": "11.5.0",
     "bip39": "3.0.4",
     "borc": "3.0.0",
     "clsx": "1.1.1",
