--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@dfinity/identity": "0.9.2",
     "@dfinity/principal": "0.9.2",
     "@emotion/css": "11.5.0",
+    "biguintle": "1.0.3",
     "bip39": "3.0.4",
     "borc": "3.0.0",
     "clsx": "1.1.1",
