--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "bip39": "3.0.4",
     "borc": "3.0.0",
     "clsx": "1.1.1",
+    "qrcode": "1.4.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "5.3.0"
   },
   "devDependencies": {
     "@types/node": "16.11.6",
+    "@types/qrcode": "1.4.1",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "5.3.2",
