--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "qrcode": "1.4.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "5.3.0"
+    "react-router-dom": "5.3.0",
+    "stream-browserify": "3.0.0"
   },
   "devDependencies": {
     "@types/node": "16.11.6",
@@ -32,18 +33,21 @@
     "@typescript-eslint/eslint-plugin": "5.2.0",
     "@typescript-eslint/parser": "5.2.0",
     "@vitejs/plugin-react-refresh": "^1.3.6",
+    "assert": "2.0.0",
     "autoprefixer": "10.3.7",
-    "buffer": "^6.0.3",
+    "buffer": "6.0.3",
     "eslint": "7.32.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-react": "7.26.1",
     "eslint-plugin-react-hooks": "4.2.1-alpha-6bce0355c-20211031",
+    "events": "3.3.0",
     "npm-run-all": "4.1.5",
     "postcss": "8.3.11",
     "prettier": "2.4.1",
     "tailwindcss": "2.2.19",
     "typescript": "^4.4.3",
+    "util": "0.12.4",
     "vite": "^2.5.7",
     "vite-tsconfig-paths": "3.3.17"
   }
