--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "qrcode": "1.4.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "6.1.0",
     "react-router-dom": "5.3.0",
     "stream-browserify": "3.0.0"
   },
@@ -29,6 +30,7 @@
     "@types/qrcode": "1.4.1",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.11",
+    "@types/react-helmet": "6.1.4",
     "@types/react-router-dom": "5.3.2",
     "@typescript-eslint/eslint-plugin": "5.2.0",
     "@typescript-eslint/parser": "5.3.0",
