fix(CD): add forgotten env var

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,8 @@ jobs:
           ID_PATH: /home/runner/.config/dfx/identity/gh_mp_admin
       - name: Echo pem
         run: cat $ID_PATH/identity.pem
+        env:
+          ID_PATH: /home/runner/.config/dfx/identity/gh_mp_admin
       - name: BACKEND | Provision Linux
         run: bash .github/workflows/dfx-provision-linux.sh
       - name: BACKEND | Deploy to production
