--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,8 @@ jobs:
           ID_PATH: /home/runner/.config/dfx/identity/gh_mp_admin
       - name: BACKEND | Provision Linux
         run: bash .github/workflows/dfx-provision-linux.sh
+      - name: Install
+        run: yarn
       - name: BACKEND | Deploy to production
         run: |
           dfx identity use gh_mp_admin
