--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,16 +20,22 @@ jobs:
           ID_PATH: /home/runner/.config/dfx/identity/gh_mp_admin
       - name: BACKEND | Provision Linux
         run: bash .github/workflows/dfx-provision-linux.sh
-      - name: Install
+      - name: MULTIPASS FRONTEND | Install
         run: yarn
-      - name: BACKEND | Deploy to production
+      - name: MULTIPASS FRONTEND | Deploy to production
         run: |
           dfx identity use gh_mp_admin
           dfx deploy --network ic --no-wallet
         env:
-          DFX_NETWORK: ${{secrets.DFX_NETWORK}}
-          MULTIPASS_FRONTEND_DOMAIN: ${{secrets.MULTIPASS_FRONTEND_DOMAIN}}
-          NEXT_PUBLIC_IC_HOST: ${{secrets.NEXT_PUBLIC_IC_HOST}}
           VITE_II_CANISTER_ID: ${{secrets.VITE_II_CANISTER_ID}}
           VITE_II_ENV: ${{secrets.VITE_II_ENV}}
           VITE_MULTIPASS_DOMAIN: ${{secrets.VITE_II_ENVVITE_II_ENV}}
+
+      - name: MULTIPASS DEMO | Install
+        run: cd examples/MultipassDemo && yarn
+      - name: MULTIPASS FRONTEND | Deploy to production
+        run: cd examples/MultipassDemo && make deploy
+        env:
+          DFX_NETWORK: ${{secrets.DFX_NETWORK}}
+          MULTIPASS_FRONTEND_DOMAIN: ${{secrets.MULTIPASS_FRONTEND_DOMAIN}}
+          NEXT_PUBLIC_IC_HOST: ${{secrets.NEXT_PUBLIC_IC_HOST}}
