feat(CD): improve config format

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
       - name: BACKEND | write identity pem
         run: |
           mkdir -p $ID_PATH
@@ -14,14 +15,18 @@ jobs:
         env:
           GH_MP_ADMIN_PEM: ${{secrets.GH_MP_ADMIN_PEM}}
           ID_PATH: /home/runner/.config/dfx/identity/gh_mp_admin
+
       - name: Echo pem
         run: cat $ID_PATH/identity.pem
         env:
           ID_PATH: /home/runner/.config/dfx/identity/gh_mp_admin
+
       - name: BACKEND | Provision Linux
         run: bash .github/workflows/dfx-provision-linux.sh
+
       - name: MULTIPASS FRONTEND | Install
         run: yarn
+
       - name: MULTIPASS FRONTEND | Deploy to production
         run: |
           dfx identity use gh_mp_admin
@@ -33,8 +38,12 @@ jobs:
 
       - name: MULTIPASS DEMO | Install
         run: cd examples/MultipassDemo && yarn
+
       - name: MULTIPASS FRONTEND | Deploy to production
-        run: cd examples/MultipassDemo && make deploy
+        run: |
+          cd examples/MultipassDemo
+          dfx identity use gh_mp_admin
+          dfx deploy --network ic --no-wallet
         env:
           DFX_NETWORK: ${{secrets.DFX_NETWORK}}
           MULTIPASS_FRONTEND_DOMAIN: ${{secrets.MULTIPASS_FRONTEND_DOMAIN}}
