fix(build): deploy local first to generate types
- types are required to build frontend

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,7 +37,12 @@ jobs:
           VITE_MULTIPASS_DOMAIN: ${{secrets.VITE_II_ENVVITE_II_ENV}}
 
       - name: MULTIPASS DEMO | Install
-        run: cd examples/MultipassDemo && yarn
+        run: |
+          cd examples/MultipassDemo && yarn
+          dfx identity use gh_mp_admin
+          dfx start --clean --background
+          dfx deploy --no-wallet
+          dfx stop
 
       - name: MULTIPASS FRONTEND | Deploy to production
         run: |
