--- a/examples/MultipassDemo/.gitignore
+++ b/examples/MultipassDemo/.gitignore
@@ -21,14 +21,15 @@ out
 
 # misc
 .DS_Store
+
+# local environment config (see .env.template)
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
+# package
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# local environment config (see .env.template)
-.env
