--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "6.1.0",
+    "react-hook-form": "7.20.2",
     "react-router-dom": "5.3.0",
     "stream-browserify": "3.0.0"
   },
