--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@dfinity/identity": "0.9.2",
     "@dfinity/principal": "0.9.3",
     "@emotion/css": "11.5.0",
+    "@tailwindcss/forms": "^0.3.4",
     "biguintle": "1.0.3",
     "bip39": "3.0.4",
     "borc": "3.0.0",
