--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@dfinity/identity": "0.9.2",
     "@dfinity/principal": "0.9.3",
     "@emotion/css": "11.5.0",
+    "@tailwindcss/forms": "^0.3.4",
     "biguintle": "1.0.3",
     "bip39": "3.0.4",
     "borc": "3.0.0",
@@ -23,6 +24,7 @@
     "react-dom": "^17.0.2",
     "react-helmet": "6.1.0",
     "react-hook-form": "7.20.2",
+    "react-icons": "^4.3.1",
     "react-router-dom": "5.3.0",
     "stream-browserify": "3.0.0"
   },
