feat(RegisterFlow): [sc-411] integrate new design
- upgrade react-router to v6
- install immer for immutable state
- add React.useCallback snipped

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,6 @@
 {
   "recommendations": [
+    "editorconfig.editorconfig",
     "joffreykern.markdown-toc",
     "mhutchie.git-graph",
     "esbenp.prettier-vscode",
