--- a/package.json
+++ b/package.json
@@ -19,13 +19,15 @@
     "bip39": "3.0.4",
     "borc": "3.0.0",
     "clsx": "1.1.1",
+    "immer": "9.0.7",
     "qrcode": "1.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "6.1.0",
     "react-hook-form": "7.20.2",
     "react-icons": "^4.3.1",
-    "react-router-dom": "5.3.0",
+    "react-router": "6.0.2",
+    "react-router-dom": "6.0.2",
     "stream-browserify": "3.0.0"
   },
   "devDependencies": {
