fix(CD): reset pipeline

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,17 +6,18 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: DFX SETUP  | Provision Linux
-        run: bash .github/workflows/dfx-provision-linux.sh
-
       - name: DFX SETUP | write identity pem
         run: |
-          echo $GH_MP_ADMIN_PEM >> /tmp/identity.pem
-          dfx identity import gh_mp_admin /tmp/identity.pem
-
+          mkdir -p $ID_PATH
+          echo $GH_MP_ADMIN_PEM >> $ID_PATH/identity.pem
+          sed -i 's/\\r\\n/\r\n/g' $ID_PATH/identity.pem
         shell: bash
         env:
           GH_MP_ADMIN_PEM: ${{secrets.GH_MP_ADMIN_PEM}}
+          ID_PATH: /home/runner/.config/dfx/identity/gh_mp_admin
+
+      - name: DFX SETUP  | Provision Linux
+        run: bash .github/workflows/dfx-provision-linux.sh
 
       - name: Multipass Frontend | install
         run: yarn
