--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,16 +30,17 @@ jobs:
       - name: Multipass Frontend | Run minimal checks
         run: yarn build
 
-      - name: Multipass Demo | install
-        run: cd examples/MultipassDemo && yarn
-
       - name: MULTIPASS DEMO | deploy backend locally
         run: |
           cd examples/MultipassDemo && yarn
+          mkdir -p $ID_PATH
+          echo $GH_MP_ADMIN_PEM >> $ID_PATH/identity.pem
+          sed -i 's/\\r\\n/\r\n/g' $ID_PATH/identity.pem
           dfx identity use gh_mp_admin
           dfx start --clean --background
           dfx deploy --no-wallet
           dfx stop
-
-      - name: Multipass Demo | Run minimal checks
-        run: cd examples/MultipassDemo && yarn build
+        shell: bash
+        env:
+          GH_MP_ADMIN_PEM: ${{secrets.GH_MP_ADMIN_PEM}}
+          ID_PATH: /home/runner/.config/dfx/identity/gh_mp_admin
