--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,13 @@
 name: Deployment
-on: workflow_dispatch
+on:
+  workflow_dispatch:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -24,8 +32,12 @@ jobs:
 
       - name: MULTIPASS FRONTEND | Deploy to production
         run: |
+          network="local"
+          if [[ ${GITHUB_REF} == "refs/heads/main" ]]; then
+            network="ic"
+          fi
           dfx identity use gh_mp_admin
-          dfx deploy --network ic --no-wallet
+          dfx deploy --network $network --no-wallet
         env:
           VITE_MP_CANISTER_ID: ${{secrets.VITE_MP_CANISTER_ID}}
           VITE_II_CANISTER_ID: ${{secrets.VITE_II_CANISTER_ID}}
@@ -34,17 +46,25 @@ jobs:
 
       - name: MULTIPASS DEMO | Install
         run: |
+          network="local"
+          if [[ ${GITHUB_REF} == "refs/heads/main" ]]; then
+            network="ic"
+          fi
           cd examples/MultipassDemo && yarn
           dfx identity use gh_mp_admin
           dfx start --clean --background
-          dfx deploy --no-wallet
+          dfx deploy --network $network --no-wallet
           dfx stop
 
       - name: MULTIPASS FRONTEND | Deploy to production
         run: |
+          network="local"
+          if [[ ${GITHUB_REF} == "refs/heads/main" ]]; then
+            network="ic"
+          fi
           cd examples/MultipassDemo
           dfx identity use gh_mp_admin
-          dfx deploy --network ic --no-wallet
+          dfx deploy --network $network --no-wallet
         env:
           DFX_NETWORK: ${{secrets.DFX_NETWORK}}
           NEXT_PUBLIC_MP_ID_PROVIDER_URL: ${{secrets.NEXT_PUBLIC_MP_ID_PROVIDER_URL}}
