--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,44 +27,35 @@ jobs:
       - name: DFX SETUP  | Provision Linux
         run: bash .github/workflows/dfx-provision-linux.sh
 
-      - name: MULTIPASS FRONTEND | deploy
+      - name: MULTIPASS FRONTEND | install & deploy
         run: |
           yarn
 
-          network="ic"
-          if [[ ${GITHUB_REF} != "refs/heads/main" ]]; then
-            network="local"
-            dfx start --clean --background
+          if [[ ${GITHUB_REF} == "refs/heads/main" ]]; then
+            dfx identity use gh_mp_admin
+            dfx deploy --network ic  --no-wallet
           fi
 
-          dfx identity use gh_mp_admin
-          dfx deploy --network $network --no-wallet
-
-          if [[ ${GITHUB_REF} != "refs/heads/main" ]]; then
-            dfx stop
-          fi
         env:
           VITE_MP_CANISTER_ID: ${{secrets.VITE_MP_CANISTER_ID}}
           VITE_II_CANISTER_ID: ${{secrets.VITE_II_CANISTER_ID}}
           VITE_II_ENV: ${{secrets.VITE_II_ENV}}
           VITE_MULTIPASS_DOMAIN: ${{secrets.VITE_MULTIPASS_DOMAIN}}
 
-      - name: MULTIPASS Demo | deploy
+      - name: MULTIPASS Demo | install & deploy
         run: |
           cd examples/MultipassDemo && yarn
 
-          network="ic"
-          if [[ ${GITHUB_REF} != "refs/heads/main" ]]; then
-            network="local"
-            dfx start --clean --background
+          # install local to generate the types
+          dfx start --clean --background
+          dfx deploy --no-wallet
+          dfx stop
+
+          if [[ ${GITHUB_REF} == "refs/heads/main" ]]; then
+            dfx identity use gh_mp_admin
+            dfx deploy --network ic  --no-wallet
           fi
 
-          dfx identity use gh_mp_admin
-          dfx deploy --network $network --no-wallet
-
-          if [[ ${GITHUB_REF} != "refs/heads/main" ]]; then
-            dfx stop
-          fi
         env:
           DFX_NETWORK: ${{secrets.DFX_NETWORK}}
           NEXT_PUBLIC_MP_ID_PROVIDER_URL: ${{secrets.NEXT_PUBLIC_MP_ID_PROVIDER_URL}}
