--- a/examples/MultipassDemo/tsconfig.json
+++ b/examples/MultipassDemo/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -18,10 +22,23 @@
     "baseUrl": ".",
     // TODO: automate this mapping
     "paths": {
-      "ic/profile": [".dfx/local/canisters/profile/index.js"],
-      "ic/profile.did": [".dfx/local/canisters/profile/profile.did.js"]
-    }
+      "ic/profile": [
+        ".dfx/local/canisters/profile/index.js"
+      ],
+      "ic/profile.did": [
+        ".dfx/local/canisters/profile/profile.did.js"
+      ]
+    },
+    "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules", ".dfx", "internet-identity"]
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx"
+  ],
+  "exclude": [
+    "node_modules",
+    ".dfx",
+    "internet-identity"
+  ]
 }
