--- a/examples/MultipassDemo/package.json
+++ b/examples/MultipassDemo/package.json
@@ -12,8 +12,8 @@
     "@identity-labs/react-ic-ii-auth": "0.0.14",
     "clsx": "1.1.1",
     "next": "12.0.7",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "typescript": "^4.5.2",
     "web-vitals": "^2.1.2"
   },
@@ -43,6 +43,7 @@
   "devDependencies": {
     "@babel/core": "7.16.0",
     "@babel/plugin-transform-typescript": "7.16.1",
+    "@tailwindcss/forms": "^0.4.0",
     "@testing-library/dom": "8.11.1",
     "@testing-library/jest-dom": "5.16.1",
     "@testing-library/react": "12.1.2",
