--- a/examples/MultipassDemo/package.json
+++ b/examples/MultipassDemo/package.json
@@ -3,7 +3,6 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "@identity-labs/ui": "link:../../frontend/ui-kit",
     "@dfinity/agent": "0.10.1",
     "@dfinity/auth-client": "0.10.1",
     "@dfinity/authentication": "0.10.1",
@@ -11,11 +10,12 @@
     "@dfinity/identity": "0.10.1",
     "@dfinity/principal": "0.10.1",
     "@identity-labs/react-ic-ii-auth": "0.0.14",
+    "@identity-labs/ui": "link:../../frontend/ui-kit",
     "clsx": "1.1.1",
     "next": "12.0.7",
     "react": "link:../../node_modules/react",
     "react-dom": "link:../../node_modules/react-dom",
-    "typescript": "^4.5.2",
+    "typescript": "4.5.4",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
