--- a/frontend/ui-kit/package.json
+++ b/frontend/ui-kit/package.json
@@ -56,7 +56,7 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build --watch",
     "serve": "vite preview",
     "test": "echo \"Error: no test specified\" && exit 1"
   }
