--- a/frontend/ui-kit/package.json
+++ b/frontend/ui-kit/package.json
@@ -57,6 +57,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:dev": "vite build --watch",
     "serve": "vite preview",
     "test": "echo \"Error: no test specified\" && exit 1"
   }
