--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-icons": "^4.3.1",
     "react-router": "6.1.1",
     "react-router-dom": "6.0.2",
-    "stream-browserify": "3.0.0"
+    "stream-browserify": "3.0.0",
+    "uuid": "8.3.2"
   },
   "devDependencies": {
     "@types/node": "17.0.0",
@@ -39,6 +40,7 @@
     "@types/react-helmet": "6.1.4",
     "@types/react-router-dom": "5.3.2",
     "@typescript-eslint/eslint-plugin": "5.7.0",
+    "@types/uuid": "8.3.3",
     "@typescript-eslint/parser": "5.7.0",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "assert": "2.0.0",
