--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-router": "6.2.1",
     "react-router-dom": "6.2.1",
     "stream-browserify": "3.0.0",
+    "swiper": "^7.0.0",
     "uuid": "8.3.2"
   },
   "devDependencies": {
