--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bip39": "3.0.4",
     "borc": "3.0.0",
     "clsx": "1.1.1",
+    "crypto-js": "^4.1.1",
     "immer": "9.0.7",
     "qrcode": "1.5.0",
     "react": "^17.0.2",
@@ -35,6 +36,7 @@
     "uuid": "8.3.2"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.0.2",
     "@types/node": "17.0.2",
     "@types/qrcode": "1.4.2",
     "@types/react": "^17.0.37",
