--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "uuid": "8.3.2"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.1.0",
     "@types/node": "17.0.5",
     "@types/qrcode": "1.4.2",
     "@types/react": "^17.0.37",
