--- a/frontend/ui-kit/package.json
+++ b/frontend/ui-kit/package.json
@@ -42,13 +42,13 @@
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-react": "7.27.1",
     "eslint-plugin-react-hooks": "4.3.0",
-    "postcss": "^8.4.4",
+    "postcss": "8.4.5",
     "prettier": "2.0.0",
     "typescript": "link:../node_modules/typescript",
     "react-icons": "^4.3.1",
     "react-router": "link:../node_modules/react-router",
     "rollup-plugin-typescript2": "^0.31.1",
-    "tailwindcss": "2.2.19",
+    "tailwindcss": "3.0.8",
     "vite": "^2.7.0"
   },
   "dependencies": {
