--- a/package.json
+++ b/package.json
@@ -53,9 +53,9 @@
     "eslint-plugin-react-hooks": "4.3.0",
     "events": "3.3.0",
     "npm-run-all": "4.1.5",
-    "postcss": "8.4.5",
+    "postcss": "^8.4.5",
     "prettier": "2.5.1",
-    "tailwindcss": "2.2.19",
+    "tailwindcss": "^3.0.8",
     "typescript": "^4.5.4",
     "util": "0.12.4",
     "vite": "^2.7.10",
