--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -7,6 +7,7 @@
     "dbaeumer.vscode-eslint",
     "rust-lang.rust",
     "vadimcn.vscode-lldb",
-    "ms-vsliveshare.vsliveshare"
+    "ms-vsliveshare.vsliveshare",
+    "heybourn.headwind"
   ]
 }
