feat([sc-589]): init hooks

--- a/.env.local.template
+++ b/.env.local.template
@@ -1,3 +1,6 @@
 VITE_II_ENV=
 VITE_II_CANISTER_ID=
+VITE_MP_CANISTER_ID=
+VITE_VAULT_CANISTER_ID=
+VITE_KEYSYNC_CANISTER_ID=
 VITE_MULTIPASS_DOMAIN=YOUR_TUNNEL.eu.ngrok.io
