--- a/examples/MultipassDemo/.env.local.template
+++ b/examples/MultipassDemo/.env.local.template
@@ -3,4 +3,4 @@ DFX_NETWORK=local
 
 NEXT_PUBLIC_ENV = development
 NEXT_PUBLIC_II_ID_PROVIDER_URL=http://YOUR_LOCAL_II_CANISTER_ID.localhost:8000/#authorize
-NEXT_PUBLIC_MP_ID_PROVIDER_URL=https://YOUR_NGROK_SUBDOMAIN.eu.ngrok.io/authenticate
+NEXT_PUBLIC_MP_ID_PROVIDER_URL=https://philipp.eu.ngrok.io/authenticate/?applicationName=NFID-Demo
