feat[sc-488]: setup nfid login

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "borc": "3.0.0",
     "clsx": "1.1.1",
     "immer": "9.0.12",
+    "jotai": "1.5.3",
     "qrcode": "1.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
