chore(CD): checks github ref to decide build strategy

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,12 +28,15 @@ jobs:
           popd
 
 
+          # On pull requests build on local replica
           # install local to generate the types
-          dfx start --clean --background
-          dfx deploy --no-wallet
-          dfx stop
+          if [[ ${GITHUB_REF} != "refs/heads/main" ]]; then
+            dfx start --clean --background
+            dfx deploy --no-wallet
+            dfx stop
+          fi
 
-
+          # On main branch build on ic
           if [[ ${GITHUB_REF} == "refs/heads/main" ]]; then
             dfx identity use action
             dfx deploy --network ic  --no-wallet
@@ -51,11 +54,15 @@ jobs:
         run: |
           cd examples/MultipassDemo && yarn
 
+          # On pull requests build on local replica
           # install local to generate the types
-          dfx start --clean --background
-          dfx deploy --no-wallet
-          dfx stop
+          if [[ ${GITHUB_REF} != "refs/heads/main" ]]; then
+            dfx start --clean --background
+            dfx deploy --no-wallet
+            dfx stop
+          fi
 
+          # On main branch build on ic
           if [[ ${GITHUB_REF} == "refs/heads/main" ]]; then
             dfx identity use action
             dfx deploy --network ic  --no-wallet
