fix[sc-599]: fix typescript resolver

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,9 @@
     "noEmit": true,
     "jsx": "react",
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "components/*": ["./frontend/ui-kit/src/components/*"]
+    }
   },
   "include": ["./frontend"],
 }
