--- a/frontend/ui-kit/tsconfig.json
+++ b/frontend/ui-kit/tsconfig.json
@@ -15,7 +15,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "baseUrl": ".",
+    "baseUrl": "src",
     "paths": {}
   },
   "include": ["src/**/*.ts", "src/**/*.tsx"],
