chore: fix staging setup for local development

--- a/.env.local.template
+++ b/.env.local.template
@@ -1,5 +1,6 @@
-VITE_MODE=STAGING
-VITE_II_ENV=development
+VITE_FRONTEND_MODE=development
+VITE_BACKEND_MODE=STAGING
+VITE_II_MODE=development
 
 VITE_MULTIPASS_DOMAIN=YOUR_TUNNEL.eu.ngrok.io
 MULTIPASS_PORT=9090
@@ -14,4 +15,3 @@ VITE_IDENTITY_MANAGER_CANISTER_ID_STAGING=
 VITE_PUB_SUB_CHANNEL_CANISTER_ID_STAGING=
 
 VITE_IC_HOST=https://ic0.app
-
