--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,10 +40,12 @@ jobs:
           fi
 
         env:
-          VITE_IDENTITY_MANAGER_CANISTER_ID: ${{secrets.VITE_IDENTITY_MANAGER_CANISTER_ID}}
-          VITE_PUB_SUB_CHANNEL_CANISTER_ID: ${{secrets.VITE_PUB_SUB_CHANNEL_CANISTER_ID}}
-          VITE_II_CANISTER_ID: ${{secrets.VITE_II_CANISTER_ID}}
-          VITE_II_ENV: ${{secrets.VITE_II_ENV}}
+          VITE_FRONTEND_MODE: production
+          VITE_BACKEND_MODE: STAGING
+          VITE_II_MODE: production
+          VITE_IDENTITY_MANAGER_CANISTER_ID_STAGING: ${{secrets.VITE_IDENTITY_MANAGER_CANISTER_ID}}
+          VITE_PUB_SUB_CHANNEL_CANISTER_ID_STAGING: ${{secrets.VITE_PUB_SUB_CHANNEL_CANISTER_ID}}
+          VITE_II_CANISTER_ID_STAGING: ${{secrets.VITE_II_CANISTER_ID}}
           VITE_MULTIPASS_DOMAIN: ${{secrets.VITE_MULTIPASS_DOMAIN}}
           VITE_AWS_VERIFY_PHONENUMBER: ${{secrets.VITE_AWS_VERIFY_PHONENUMBER}}
 
