--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
-VITE_II_ENV=production
+VITE_II_MODE=production
 VITE_II_CANISTER_ID=zze6x-3yaaa-aaaal-aaana-cai
 VITE_MULTIPASS_DOMAIN=3y5ko-7qaaa-aaaal-aaaaq-cai.ic0.app
