fix: removed multiple hard coded items

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "biguintle": "1.0.3",
     "bip39": "3.0.4",
     "borc": "3.0.0",
+    "bowser": "^2.11.0",
     "clsx": "1.1.1",
     "immer": "9.0.12",
     "jotai": "1.5.3",
