--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,6 +48,7 @@ jobs:
           VITE_II_CANISTER_ID_STAGING: ${{secrets.VITE_II_CANISTER_ID}}
           VITE_MULTIPASS_DOMAIN: ${{secrets.VITE_MULTIPASS_DOMAIN}}
           VITE_AWS_VERIFY_PHONENUMBER: ${{secrets.VITE_AWS_VERIFY_PHONENUMBER}}
+          VITE_USERGEEK_API_KEY: ${{secrets.VITE_USERGEEK_API_KEY}}
 
       - name: MULTIPASS Demo | install & deploy
         run: |
