chore: configure https server

--- a/.env.local.template
+++ b/.env.local.template
@@ -15,3 +15,6 @@ VITE_IDENTITY_MANAGER_CANISTER_ID_STAGING=
 VITE_PUB_SUB_CHANNEL_CANISTER_ID_STAGING=
 
 VITE_IC_HOST=https://ic0.app
+
+VITE_LOCALHOST_KEY_LOCATION=
+VITE_LOCALHOST_CERT_LOCATION=
