chore[webpack]: finalize configuration

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,12 +43,11 @@ jobs:
           REACT_APP_FRONTEND_MODE: production
           REACT_APP_BACKEND_MODE: STAGING
           REACT_APP_II_MODE: production
-          REACT_APP_IDENTITY_MANAGER_CANISTER_ID_STAGING: ${{secrets.VITE_IDENTITY_MANAGER_CANISTER_ID}}
-          REACT_APP_PUB_SUB_CHANNEL_CANISTER_ID_STAGING: ${{secrets.VITE_PUB_SUB_CHANNEL_CANISTER_ID}}
-          REACT_APP_II_CANISTER_ID_STAGING: ${{secrets.REACT_APP_II_CANISTER_ID}}
-          VITE_MULTIPASS_DOMAIN: ${{secrets.VITE_MULTIPASS_DOMAIN}}
-          REACT_APP_AWS_VERIFY_PHONENUMBER: ${{secrets.REACT_APP_AWS_VERIFY_PHONENUMBER}}
-          REACT_APP_USERGEEK_API_KEY: ${{secrets.REACT_APP_USERGEEK_API_KEY}}
+          REACT_APP_IDENTITY_MANAGER_CANISTER_ID_STAGING: ${{secrets.IDENTITY_MANAGER_CANISTER_ID}}
+          REACT_APP_PUB_SUB_CHANNEL_CANISTER_ID_STAGING: ${{secrets.PUB_SUB_CHANNEL_CANISTER_ID}}
+          REACT_APP_II_CANISTER_ID_STAGING: ${{secrets.II_CANISTER_ID}}
+          REACT_APP_AWS_VERIFY_PHONENUMBER: ${{secrets.AWS_VERIFY_PHONENUMBER}}
+          REACT_APP_USERGEEK_API_KEY: ${{secrets.USERGEEK_API_KEY}}
 
       - name: MULTIPASS Demo | install & deploy
         run: |
