fix[webpack]: ui-kit path

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@dfinity/candid": "0.9.3",
     "@dfinity/identity": "0.9.3",
     "@dfinity/principal": "0.9.3",
-    "@identity-labs/ui": "link:frontend/ui-kit",
+    "@identity-labs/ui": "link:src/ui-kit",
     "@tailwindcss/forms": "^0.5.0",
     "biguintle": "1.0.3",
     "bip39": "3.0.4",
