--- a/examples/MultipassDemo/package.json
+++ b/examples/MultipassDemo/package.json
@@ -10,7 +10,7 @@
     "@dfinity/identity": "0.10.1",
     "@dfinity/principal": "0.10.1",
     "@identity-labs/react-ic-ii-auth": "0.0.14",
-    "@identity-labs/ui": "link:../../frontend/ui-kit",
+    "@identity-labs/ui": "link:../../src/ui-kit",
     "clsx": "1.1.1",
     "next": "12.0.7",
     "react": "link:../../node_modules/react",
