--- a/.env.local.default
+++ b/.env.local.default
@@ -1,19 +1,19 @@
 MULTIPASS_PORT=9090
 
-VITE_FRONTEND_MODE=development
-VITE_BACKEND_MODE=STAGING
-VITE_II_MODE=production
+REACT_APP_FRONTEND_MODE=development
+REACT_APP_BACKEND_MODE=STAGING
+REACT_APP_II_MODE=production
 
-VITE_MULTIPASS_DOMAIN=philipp.eu.ngrok.io
-VITE_AWS_VERIFY_PHONENUMBER=https://ia15v0pzlb.execute-api.us-east-1.amazonaws.com/dev/verify/
+REACT_APP_MULTIPASS_DOMAIN=philipp.eu.ngrok.io
+REACT_APP_AWS_VERIFY_PHONENUMBER=https://ia15v0pzlb.execute-api.us-east-1.amazonaws.com/dev/verify/
 
-VITE_II_CANISTER_ID_LOCAL=sp3hj-caaaa-aaaaa-aaajq-cai
-VITE_IDENTITY_MANAGER_CANISTER_ID_LOCAL=zwmtd-uqaaa-aaaaa-aabwq-cai
-VITE_PUB_SUB_CHANNEL_CANISTER_ID_LOCAL=z7py7-cyaaa-aaaaa-aabxa-cai
+REACT_APP_II_CANISTER_ID_LOCAL=sp3hj-caaaa-aaaaa-aaajq-cai
+REACT_APP_IDENTITY_MANAGER_CANISTER_ID_LOCAL=zwmtd-uqaaa-aaaaa-aabwq-cai
+REACT_APP_PUB_SUB_CHANNEL_CANISTER_ID_LOCAL=z7py7-cyaaa-aaaaa-aabxa-cai
 
-VITE_II_CANISTER_ID_STAGING=rdmx6-jaaaa-aaaaa-aaadq-cai
-VITE_IDENTITY_MANAGER_CANISTER_ID_STAGING=74gpt-tiaaa-aaaak-aacaa-cai
-VITE_PUB_SUB_CHANNEL_CANISTER_ID_STAGING=iyvpb-uqaaa-aaaag-qabxa-cai
+REACT_APP_II_CANISTER_ID_STAGING=rdmx6-jaaaa-aaaaa-aaadq-cai
+REACT_APP_IDENTITY_MANAGER_CANISTER_ID_STAGING=74gpt-tiaaa-aaaak-aacaa-cai
+REACT_APP_PUB_SUB_CHANNEL_CANISTER_ID_STAGING=iyvpb-uqaaa-aaaag-qabxa-cai
 
-VITE_IC_HOST=https://ic0.app
-VITE_
+REACT_APP_IC_HOST=https://ic0.app
+REACT_APP_
