--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,6 +43,7 @@ jobs:
           REACT_APP_FRONTEND_MODE: production
           REACT_APP_BACKEND_MODE: STAGING
           REACT_APP_II_MODE: production
+          REACT_APP_MULTIPASS_DOMAIN: ${{secrets.VITE_MULTIPASS_DOMAIN}}
           REACT_APP_IDENTITY_MANAGER_CANISTER_ID_STAGING: ${{secrets.VITE_IDENTITY_MANAGER_CANISTER_ID}}
           REACT_APP_PUB_SUB_CHANNEL_CANISTER_ID_STAGING: ${{secrets.VITE_PUB_SUB_CHANNEL_CANISTER_ID}}
           REACT_APP_II_CANISTER_ID_STAGING: ${{secrets.VITE_II_CANISTER_ID}}
