--- a/package.json
+++ b/package.json
@@ -71,6 +71,12 @@
     "vite": "^2.8.6",
     "vite-tsconfig-paths": "3.4.1"
   },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
   "browserslist": {
     "production": [
       "last 2 chrome version",
