--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "assert": "2.0.0",
     "autoprefixer": "10.4.2",
     "buffer": "6.0.3",
+    "dotenv": "16.0.0",
     "eslint": "8.11.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-prettier": "4.0.0",
