--- a/examples/create-ic-app-react-demo/package.json
+++ b/examples/create-ic-app-react-demo/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "demo",
+  "name": "create-ic-app-react-demo",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "serve": "vite preview",
-    "ic:deploy": "dfx deploy",
-    "ic:start": "dfx start --background",
-    "ic:start-clean": "dfx start --background --clean"
+    "serve": "vite preview"
   },
   "dependencies": {
     "@dfinity/agent": "0.10.0",
@@ -16,8 +13,7 @@
     "@dfinity/candid": "0.10.0",
     "@dfinity/identity": "0.10.0",
     "@dfinity/principal": "0.10.0",
-    "@identity-labs/react-ic-ii-auth": "0.0.14",
-    "@identity-labs/ui": "link:../../src/ui-kit",
+    "@identity-labs/react-ic-ii-auth": "^0.0.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "tailwindcss": "^3.0.23"
@@ -29,10 +25,6 @@
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "buffer": "^6.0.3",
     "typescript": "^4.4.3",
-    "vite": "^2.8.6",
-    "@tailwindcss/forms": "^0.4.0",
-    "postcss": "8.4.5",
-    "prettier": "2.5.1",
-    "tailwindcss": "^3.0.8"
+    "vite": "^2.5.7"
   }
 }
