--- a/examples/create-ic-app-react-demo/tsconfig.json
+++ b/examples/create-ic-app-react-demo/tsconfig.json
@@ -25,23 +25,10 @@
     "paths": {
       "canisters/counter": [
         ".dfx/local/canisters/counter"
-      ],
-      "ic/profile": [
-        ".dfx/local/canisters/profile/index.js"
-      ],
-      "ic/profile.did": [
-        ".dfx/local/canisters/profile/profile.did.js"
-      ],
-    },
+      ]
+    }
   },
   "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx"
-  ],
-  "exclude": [
-    "node_modules",
-    ".dfx",
-    "internet-identity"
+    "./frontend"
   ]
 }
