configured pipelines for new demo

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,3 +69,23 @@ jobs:
           DFX_NETWORK: ${{secrets.DFX_NETWORK}}
           NEXT_PUBLIC_MP_ID_PROVIDER_URL: ${{secrets.NEXT_PUBLIC_MP_ID_PROVIDER_URL}}
           NEXT_PUBLIC_IC_HOST: ${{secrets.NEXT_PUBLIC_IC_HOST}}
+
+      - name: CREATE-IC-APP-REACT Demo | install & deploy
+        run: |
+          cd examples/create-ic-app-react-demo && yarn
+
+          # install local to generate the types
+          dfx start --clean --background
+          dfx deploy --no-wallet
+          dfx stop
+
+          # On main branch build on ic
+          if [[ ${GITHUB_REF} == "refs/heads/main" ]]; then
+            dfx identity use action
+            dfx deploy --network ic  --no-wallet
+          fi
+
+        env:
+          DFX_NETWORK: ${{secrets.DFX_NETWORK}}
+          VITE_NFID_PROVIDER_URL: ${{secrets.NEXT_PUBLIC_MP_ID_PROVIDER_URL}}
+          NEXT_PUBLIC_IC_HOST: ${{secrets.NEXT_PUBLIC_IC_HOST}}
