--- a/examples/create-ic-app-react-demo/.env
+++ b/examples/create-ic-app-react-demo/.env
@@ -1,1 +1,2 @@
+VITE_NFID_PROVIDER_IFRAME_URL=https://pavlo.eu.ngrok.io/iframe-authenticate/?applicationName=NFID-Demo
 VITE_NFID_PROVIDER_URL=https://pavlo.eu.ngrok.io/authenticate/?applicationName=NFID-Demo
