--- a/examples/create-ic-app-react-demo/package.json
+++ b/examples/create-ic-app-react-demo/package.json
@@ -14,6 +14,7 @@
     "@dfinity/identity": "0.10.0",
     "@dfinity/principal": "0.10.0",
     "@identity-labs/react-ic-ii-auth": "^0.0.15",
+    "@identity-labs/ui": "link:../../src/ui-kit",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "tailwindcss": "^3.0.23"
@@ -23,7 +24,9 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "@vitejs/plugin-react-refresh": "^1.3.6",
+    "autoprefixer": "^10.4.4",
     "buffer": "^6.0.3",
+    "postcss": "^8.4.12",
     "typescript": "^4.4.3",
     "vite": "^2.5.7"
   }
