chore[scaffold]: simplify generated interface

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     "paths": {
       "frontend/*": ["./src/*"],
       "components/*": ["src/ui-kit/src/components/*"]
-    }
+    },
+    "types": ["src/types"]
   },
   "include": ["src"],
   "exclude": ["node_modules"]
