fix[sc-1188]: update patch

--- a/examples/create-ic-app-react-demo/package.json
+++ b/examples/create-ic-app-react-demo/package.json
@@ -8,13 +8,13 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "@dfinity/agent": "0.10.0",
-    "@dfinity/auth-client": "0.10.0",
-    "@dfinity/authentication": "0.10.0",
-    "@dfinity/candid": "0.10.0",
-    "@dfinity/identity": "0.10.0",
-    "@dfinity/principal": "0.10.0",
-    "@identity-labs/react-ic-ii-auth": "^0.0.15",
+    "@dfinity/agent": "0.10.3",
+    "@dfinity/auth-client": "0.10.3",
+    "@dfinity/authentication": "0.10.3",
+    "@dfinity/candid": "0.10.3",
+    "@dfinity/identity": "0.10.3",
+    "@dfinity/principal": "0.10.3",
+    "@identity-labs/react-ic-ii-auth": "0.0.16",
     "@identity-labs/ui": "link:../../src/ui-kit",
     "patch-package": "^6.4.7",
     "react": "link:../../node_modules/react",
